cpp/tests/compile_fail/missing_mapping_after.out
In file included from tests/compile_fail/missing_mapping_after.cpp:19:
src/lguim/secureenumconverter.inc:31:6: error: #error "SEC_MAPPING not defined"
     #error "SEC_MAPPING not defined"
      ^~~~~
compilation terminated due to -Wfatal-errors.
